name = "kerndeterminer"
version = "0.0.1"
description = "Work out how far apart things should be (very quickly)"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
readme = "README.md"

[project]
dependencies = []
name = "kerndeterminer"

[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"
